<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".InfoActivities.LabelActivity">

    <TextView
        android:id="@+id/label_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Label One"
        android:textSize="24sp"
        android:paddingBottom="4dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/label_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_header"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="12sp"
            android:text="@string/player_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:text="@string/action" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:text="@string/point_scored" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:text="@string/minute" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:text="@string/second" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginLeft="8dp"
            android:text="@string/quarter" />

    </LinearLayout>

    <ListView
        android:id="@+id/label_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_info"
        android:layout_above="@id/export_button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/export_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:text="@string/export"
        android:gravity="center|bottom"
        android:textSize="16sp"/>

</RelativeLayout>