<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name" />
    
    <TextView
        android:id="@+id/games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_above="@id/league"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:layout_margin="32dp"
        android:text="@string/games" />

    <TextView
        android:id="@+id/league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:layout_above="@id/teams"
        android:layout_margin="32dp"
        android:text="@string/league" />

    <TextView
        android:id="@+id/teams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/teams" />

</RelativeLayout>