<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".MatchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/match_arena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="16sp"
            tools:text="Wolswogen Arena"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/match_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:text="12:12"
            android:textSize="16sp" />

        <TextView
        android:id="@+id/match_quarter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        tools:text="Quarter:1"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/court"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"
        android:scaleType="fitXY"
        android:src="@drawable/court" />

    <RelativeLayout
        android:id="@+id/match_stats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="2" >

        <LinearLayout
            android:id="@+id/score_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/homeTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:background="?attr/selectableItemBackground"
                tools:text="Home Team" />

            <TextView
                android:id="@+id/teams_scores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                tools:text="119-110" />


            <TextView
                android:id="@+id/awayTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:background="?attr/selectableItemBackground"
                android:layout_marginLeft="8dp"
                tools:text="Away Team"
                android:gravity="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_below="@id/score_board"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/holo_red_light"
            tools:text="James Harden scores 3 PTS"/>

        <LinearLayout
            android:id="@+id/player_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/label_text">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/player_name" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/point_scored" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/rebound" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginLeft="8dp"
                android:text="@string/assists" />


        </LinearLayout>

        <ListView
            android:id="@+id/match_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player_stats"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/match_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_stop_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:text="@string/start"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete_match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_weight="1"
            android:text="@string/delete"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>
