<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".InfoActivities.LeagueActivity">

    <TextView
        android:id="@+id/league_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        tools:text="NBA"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/league_name"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/team_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/win_count" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/lose_count" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/win_streak" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:id="@+id/team_name1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            tools:text="Los Angeles Lakers" />

        <TextView
            android:id="@+id/win_count1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="16" />

        <TextView
            android:id="@+id/lose_count1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />

        <TextView
            android:id="@+id/win_streak1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_3"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:id="@+id/team_name2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            tools:text="Los Angeles Lakers" />

        <TextView
            android:id="@+id/win_count2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="16" />

        <TextView
            android:id="@+id/lose_count2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />

        <TextView
            android:id="@+id/win_streak2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_4"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:id="@+id/team_name3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            tools:text="Los Angeles Lakers" />

        <TextView
            android:id="@+id/win_count3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="16" />

        <TextView
            android:id="@+id/lose_count3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />

        <TextView
            android:id="@+id/win_streak3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout_5"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" >

        <TextView
            android:id="@+id/team_name4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:background="?attr/selectableItemBackground"
            tools:text="Los Angeles Lakers" />

        <TextView
            android:id="@+id/win_count4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="16" />

        <TextView
            android:id="@+id/lose_count4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />

        <TextView
            android:id="@+id/win_streak4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            tools:text="2" />
    </LinearLayout>


</RelativeLayout>